# krecipes

./: AUTHORS  BUGS  CMakeLists.txt  COPYING  ChangeLog  KRAZY  Makefile.am  README  RELEASE-PROCEDURE  TODO  configure.in.bot  configure.in.in  krecipes.kdevelop
data/: CMakeLists.txt  Makefile.am  abbrev.txt  data.sql  ingredient-data-en_US.txt  litedata.sql  litestructure.sql  mysqldata.sql  mysqlstructure.sql  property-data-en_US.txt  samples-cs_CZ.kreml  samples-en_US.kreml  unit-data-en_US.txt  x-krecipes-backup.desktop  x-krecipes-recipes.desktop
icons/: CMakeLists.txt  Makefile.am
krecipes/data/: Makefile.am  data-en_US.sql  prep-data-en_US.txt  weight.txt  x-krecipes-backup.desktop
layouts/: Blue.klo  Book.css  Book.xsl  CMakeLists.txt  Default.css  Default.klo  Default.template  Default.xsl  Makefile.am  None.klo  Simple_Green.css  Simple_Green.xsl  Simple_Orange.css  Simple_Orange.xsl  Tiles.css  Tiles.xsl  Two_Column.css  Two_Column.template  Two_Column.xsl  default.klo  default.template  default_print.klo  one_column.klo
pics/: CMakeLists.txt  Makefile.am  resources.qrc
src/: CMakeLists.txt  ConfigureChecks.cmake  Makefile.am  Messages.sh  config-krecipes.h.cmake  conversiontable.cpp  conversiontable.h  convert_sqlite3.cpp  convert_sqlite3.h  deprecated.h  editbox.cpp  editbox.h  element.cpp  element.h  elementlist.cpp  elementlist.h  fractioninput.cpp  fractioninput.h  image.h  ingredient.cpp  ingredient.h  ingredientlist.cpp  ingredientlist.h  ingredientproperty.cpp  ingredientproperty.h  ingredientpropertylist.cpp  ingredientpropertylist.h  klomanager.cpp  klomanager.h  krecipes.cpp  krecipes.desktop  krecipes.h  krecipes.lsm  krecipes_version.h  krecipesdbiface.h  krecipesiface.h  krecipesui.rc  krecipesview.cpp  krecipesview.h  krepagelayout.cpp  (+33 more)
src/DBBackend/: Makefile.am  qsqlrecipedb.cpp  qsqlrecipedb.h  recipedb.cpp  recipedb.h  usda_ingredient_data.h  usda_property_data.h
src/actionshandlers/: actionshandlerbase.cpp  actionshandlerbase.h  authoractionshandler.cpp  authoractionshandler.h  categoryactionshandler.cpp  categoryactionshandler.h  headeractionshandler.cpp  headeractionshandler.h  ingredientactionshandler.cpp  ingredientactionshandler.h  kreauthoractionshandler.cpp  kreauthoractionshandler.h  krecategoryactionshandler.cpp  krecategoryactionshandler.h  kregenericactionshandler.cpp  kregenericactionshandler.h  kreheaderactionshandler.cpp  kreheaderactionshandler.h  kreingredientactionshandler.cpp  kreingredientactionshandler.h  kreprepmethodactionshandler.cpp  kreprepmethodactionshandler.h  krepropertyactionshandler.cpp  krepropertyactionshandler.h  krerecipeactionshandler.cpp  krerecipeactionshandler.h  kreunitactionshandler.cpp  kreunitactionshandler.h  prepmethodactionshandler.cpp  prepmethodactionshandler.h  propertyactionshandler.cpp  propertyactionshandler.h  recipeactionshandler.cpp  recipeactionshandler.h  unitactionshandler.cpp  unitactionshandler.h
src/api_v2_design/: README  kreelements.h  kremodels.h
src/backends/: CMakeLists.txt  Makefile.am  krecipesdbiface.h  org.kde.krecipesdb.xml  progressinterface.cpp  progressinterface.h  qsqlrecipedb.cpp  qsqlrecipedb.h  recipedb.cpp  recipedb.h  searchparameters.h  usda_ingredient_data.cpp  usda_ingredient_data.h  usda_property_data.cpp  usda_property_data.h  usda_unit_data.cpp  usda_unit_data.h
src/datablocks/: CMakeLists.txt  Makefile.am  categorytree.cpp  categorytree.h  constraintlist.cpp  constraintlist.h  element.cpp  element.h  elementlist.cpp  elementlist.h  ingredient.cpp  ingredient.h  ingredientlist.cpp  ingredientlist.h  ingredientproperty.cpp  ingredientproperty.h  ingredientpropertylist.cpp  ingredientpropertylist.h  kreborder.cpp  kreborder.h  mixednumber.cpp  mixednumber.h  mixednumberrange.cpp  mixednumberrange.h  rating.cpp  rating.h  ratingcriteria.cpp  ratingcriteria.h  recipe.cpp  recipe.h  recipelist.cpp  recipelist.h  unit.cpp  unit.h  unitratio.cpp  unitratio.h  unitratiolist.cpp  unitratiolist.h  weight.cpp  weight.h  (+2 more)
src/dialogs/: CMakeLists.txt  Makefile.am  advancedsearchdialog.cpp  advancedsearchdialog.h  authorsdialog.cpp  authorsdialog.h  borderdialog.cpp  borderdialog.h  categorieseditordialog.cpp  categorieseditordialog.h  conversiondialog.cpp  conversiondialog.h  createcategorydialog.cpp  createcategorydialog.h  createelementdialog.cpp  createelementdialog.h  createingredientweightdialog.cpp  createingredientweightdialog.h  createpropertydialog.cpp  createpropertydialog.h  createunitconversiondialog.cpp  createunitconversiondialog.h  createunitdialog.cpp  createunitdialog.h  dbimportdialog.cpp  dbimportdialog.h  dependanciesdialog.cpp  dependanciesdialog.h  dietviewdialog.cpp  dietviewdialog.h  dietwizarddialog.cpp  dietwizarddialog.h  dualprogressdialog.cpp  dualprogressdialog.h  editpropertiesdialog.cpp  editpropertiesdialog.h  editratingdialog.cpp  editratingdialog.h  ingredientgroupsdialog.cpp  ingredientgroupsdialog.h  (+51 more)
src/dtos/: kreelement.cpp  kreelement.h  kreingheader.cpp  kreingheader.h  kreingredient.cpp  kreingredient.h
src/exporters/: CMakeLists.txt  Makefile.am  baseexporter.cpp  baseexporter.h  cookmlexporter.cpp  cookmlexporter.h  htmlbookexporter.cpp  htmlbookexporter.h  htmlexporter.cpp  htmlexporter.h  kreexport.cpp  kreexport.h  kreexporter.cpp  kreexporter.h  mmfexporter.cpp  mmfexporter.h  mx2exporter.cpp  mx2exporter.h  plaintextexporter.cpp  plaintextexporter.h  recipemlexporter.cpp  recipemlexporter.h  rezkonvexporter.cpp  rezkonvexporter.h  xsltexporter.cpp  xsltexporter.h
src/gui/: Makefile.am  kstartuplogo.cpp  kstartuplogo.h  pagesetupdialog.cpp  pagesetupdialog.h  setupdisplay.cpp  setupdisplay.h
src/importers/: CMakeLists.txt  Makefile.am  baseimporter.cpp  baseimporter.h  kredbimporter.cpp  kredbimporter.h  kreimporter.cpp  kreimporter.h  mmfimporter.cpp  mmfimporter.h  mx2importer.cpp  mx2importer.h  mxpimporter.cpp  mxpimporter.h  nycgenericimporter.cpp  nycgenericimporter.h  recipemlimporter.cpp  recipemlimporter.h  rezkonvimporter.cpp  rezkonvimporter.h
src/kioslave/: Makefile.am  krecipes.cpp  (+2 more)
(+551 files in other folders)
